# telegramZ

./: io.github.cleomenezesjr.telegramZ.json  meson.build
data/: io.github.cleomenezesjr.telegramZ.appdata.xml.in  io.github.cleomenezesjr.telegramZ.desktop.in  io.github.cleomenezesjr.telegramZ.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  telegramz.gresource.xml  telegramz.in  window.py  window.ui
